@@ -1,23 +1,14 @@
 # Minecraft Modpack Manager
-
-A JavaFX-based application for managing Minecraft modpacks and their mods with automatic data persistence.
-
-## Features
-
-✅ **Three-Class Inheritance Architecture**: ModpackGUI → ModpackManager → ModpackUpdate  
-✅ **Auto-Save Functionality**: Changes are automatically saved without manual intervention  
-✅ **Persistent Data Storage**: Text-based format with proper indentation handling  
-✅ **Comprehensive GUI**: Complete JavaFX interface for all operations  
-✅ **Robust Testing**: Full test suite covering all functionality  
+A JavaFX application for managing Minecraft modpacks and tracking changes to mod collections.
 
 ## Project Overview
-
-This project implements a production-ready modpack management system with clean architecture, comprehensive testing, and reliable data persistence.
+This project implements a modpack management system. It consists of three main classes that follow an inheritance hierarchy, allowing for comprehensive modpack and mod management with a user-friendly JavaFX interface.
 
 ## Class Architecture
 
 ### 1. ModpackUpdate (Base Class)
 **Purpose**: Base class for tracking modpack changes
+
 **Key Features**:
 - Maintains lists of recently added and removed mods
 - Provides methods to track changes in modpacks
@@ -38,10 +29,11 @@ This project implements a production-ready modpack management system with clean 
 
 ### 2. ModpackManager (Extends ModpackUpdate)
 **Purpose**: Core data management for modpacks and their mods
+
 **Key Features**:
 - Stores modpack collections and their associated mods
 - Manages mod assignments to specific modpacks
-- Handles data persistence (save/load functionality)
+- Handles data persistence with auto-save functionality
 
 **Fields**:
 - `modpacks: List<String>` - List of all modpack names
@@ -62,9 +54,11 @@ This project implements a production-ready modpack management system with clean 
 
 ### 3. ModpackGUI (Extends ModpackManager)
 **Purpose**: User interface layer using JavaFX
+
 **Key Features**:
 - Creates visual interface for modpack management
 - Handles user interactions and events
+- Provides automatic data persistence
 - Displays modpack information and changes
 
 **Fields**:
@@ -76,77 +70,49 @@ This project implements a production-ready modpack management system with clean 
 - `createGUI(Stage stage)` - Initializes the main interface
 - `showMainScreen()` - Displays modpack selection
 - `showModpackScreen(String modpack)` - Shows mod management screen
-- `addModButton()` - Handles add mod button click
-- `removeModButton()` - Handles remove mod button
-- `selectModpack()` - Handles modpack selection
-- `showChangesDialog()` - Displays log of all changes
+- `autoSave()` - Automatically saves changes when data is modified
 
 ## Testing
+The project includes comprehensive test suite:
 
-The project includes comprehensive test suites for all classes:
-
-### ModpackUpdateTest
+**SimpleTestRunner**
 - Tests change tracking functionality
 - Validates add/remove operations
-- Tests edge cases (null, empty inputs)
-- Verifies change clearing
-
-### ModpackManagerTest
 - Tests modpack CRUD operations
 - Validates mod management within modpacks
-- Tests data persistence (save/load)
-- Verifies summary generation
+- Tests edge cases (null, empty inputs)
+- Verifies data persistence
+- Tests integration scenarios
 
-### Running Tests
+## Running Tests
 ```bash
 # Run all tests
-java -cp src/test/java:src/main/java com.example.TestRunner
-
-# Run individual test classes
-java -cp src/test/java:src/main/java com.example.ModpackUpdateTest
-java -cp src/test/java:src/main/java com.example.ModpackManagerTest
-java -cp src/test/java:src/main/java com.example.ModpackGUITest
+./run-tests.bat
 ```
 
-### Compilation and Execution
+## Compilation and Execution
 ```bash
 # Compile the project
-mvn clean compile
+./compile.bat
 
 # Run the application
-mvn javafx:run
-
-# Or run directly
-java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -cp target/classes com.example.App
+./run-gui.bat
 ```
 
 ## Usage
-
 1. **Launch the Application**: Run the main App class
-2. **Create Modpacks**: Use the "Create New Modpack" button
+2. **Create Modpacks**: Use the interface to create new modpacks
 3. **Select Modpack**: Choose a modpack to manage
-4. **Manage Mods**: Add or remove mods using the respective buttons
-5. **View Changes**: Click "View Changes" to see modification history
-6. **Save Data**: Use "Save Data" to persist changes to file
-7. **Load Data**: Use "Load Data" to restore previous sessions
+4. **Manage Mods**: Add or remove mods using the interface
+5. **Auto-Save**: All changes are automatically saved
 
 ## Data Storage
-
 The application saves data to `modpack_data.txt` in a simple text format:
 - Modpack names are listed under "MODPACKS:" section
 - Mod mappings are listed under "MODPACK_MODS:" section
 - Each modpack's mods are indented under the modpack name
 
-## Future Enhancements
-
-- Integration with actual mod files
-- Web-based modpack synchronization
-- Mod version tracking
-- Export/Import functionality
-- Mod dependency management
-
 ## Class Relationships
-
 ```
 ModpackUpdate (Base)
     ↑ inherits
